# ga_py — Python bindings for the hd::ga library.
#
# Two ways to build:
#
# 1) Top-level (recommended): from the project root,
#       cd build && cmake .. -D_GA_BUILD_PYTHON=ON && cmake --build .
#    This integrates with the rest of the project; nanobind is auto-detected
#    via the Python interpreter found by find_package(Python).
#
# 2) Standalone (for quick iteration on the wrapper alone),
#       cmake -S ga_py -B build/ga_py \
#             -DPython_EXECUTABLE=$(which python3) \
#             -DCMAKE_PREFIX_PATH="$(python3 -c 'import nanobind; print(nanobind.cmake_dir())')"
#       cmake --build build/ga_py

cmake_minimum_required(VERSION 3.28)
project(ga_py LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Project root holds the ga/ headers we bind.
set(GA_PROJECT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/..")

# If the user has a wrapper venv at ga_py/.venv (the documented setup), prefer
# its Python. nanobind lives in that venv too, so the build works with no
# extra flags. The user can override by passing -DPython_EXECUTABLE explicitly.
if(NOT Python_EXECUTABLE)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.venv/bin/python")
        set(Python_EXECUTABLE "${CMAKE_CURRENT_SOURCE_DIR}/.venv/bin/python")
        message(STATUS "ga_py: using wrapper venv Python at ${Python_EXECUTABLE}")
    elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.venv/Scripts/python.exe")  # Windows
        set(Python_EXECUTABLE "${CMAKE_CURRENT_SOURCE_DIR}/.venv/Scripts/python.exe")
        message(STATUS "ga_py: using wrapper venv Python at ${Python_EXECUTABLE}")
    endif()
endif()

find_package(Python 3.10 REQUIRED COMPONENTS Interpreter Development.Module)

# Auto-discover nanobind via the Python interpreter we just located. This lets
# the top-level build work with no extra flags --- as long as `pip install
# nanobind` has happened in that interpreter, find_package(nanobind) succeeds.
if(NOT nanobind_DIR)
    execute_process(
        COMMAND "${Python_EXECUTABLE}" -c
                "import nanobind; print(nanobind.cmake_dir())"
        OUTPUT_VARIABLE _nanobind_cmake_dir
        OUTPUT_STRIP_TRAILING_WHITESPACE
        RESULT_VARIABLE _nanobind_lookup_result
        ERROR_QUIET
    )
    if(_nanobind_lookup_result EQUAL 0 AND IS_DIRECTORY "${_nanobind_cmake_dir}")
        set(nanobind_DIR "${_nanobind_cmake_dir}" CACHE PATH "nanobind cmake dir")
        message(STATUS "ga_py: auto-detected nanobind at ${nanobind_DIR}")
    else()
        message(FATAL_ERROR
            "ga_py: nanobind not found via ${Python_EXECUTABLE}. "
            "Install it with: ${Python_EXECUTABLE} -m pip install nanobind")
    endif()
endif()
find_package(nanobind CONFIG REQUIRED)

# fmt is required by the generated bindings (for __repr__/__str__).
# In the rest of the project fmt is found via brew/vcpkg; for the spike build
# we accept it via CMAKE_PREFIX_PATH or system paths.
find_package(fmt QUIET)

# Pull in the generated list of binding sources (one per user type plus
# register_all.cpp). The list is regenerated by ga_bindgen whenever new
# types are added; contributors must commit it alongside the .cpp files.
include("${CMAKE_CURRENT_SOURCE_DIR}/src/generated/bindings_list.cmake")

# Build the extension module. Naming: NB_MODULE(_ga_py, ...) → file _ga_py.so.
# Hand-written bindings live alongside src/module.cpp; everything else is
# generated under src/generated/ and listed in bindings_list.cmake.
nanobind_add_module(_ga_py
    NB_STATIC
    src/module.cpp
    src/bindings_rk4_step.cpp
    src/bindings_physics.cpp
    ${GA_PY_GENERATED_SOURCES}
)

target_include_directories(_ga_py PRIVATE
    "${GA_PROJECT_ROOT}"           # so #include "ga/ga_ega.hpp" resolves
)

target_compile_definitions(_ga_py PRIVATE
    FMT_HEADER_ONLY=1              # match the rest of the project
    _HD_GA_EXTENDED_TEST_DIV_BY_ZERO
)

# fmt include dir: prefer the imported target if found, otherwise rely on
# system include paths discovered by the compiler.
if(fmt_FOUND)
    target_link_libraries(_ga_py PRIVATE fmt::fmt-header-only)
else()
    # macOS homebrew fallback — keeps the spike build runnable without vcpkg.
    if(EXISTS "/opt/homebrew/include/fmt/format.h")
        target_include_directories(_ga_py PRIVATE "/opt/homebrew/include")
    endif()
endif()

# Install so the module sits next to the package when packaged with wheels.
install(TARGETS _ga_py LIBRARY DESTINATION ga_py)
install(DIRECTORY python/ga_py DESTINATION .)

# ----------------------------------------------------------------------------
# Top-level convenience targets for the Python wrapper pipeline.
#
# The full workflow has four phases:
#   1. scan  ga/*.hpp   -> ga_bindgen/manifest.json     (ga_bindgen/src/scan.py)
#   2. emit  manifest   -> ga_py/src/generated/*.cpp    (ga_bindgen/src/emit_nanobind.py)
#   3. compile          -> _ga_py.{so,pyd}              (target: _ga_py)
#   4. refresh JSON     -> ga_py/tests/data/*.json      (target: regenerate_python_test_data)
#
# Phases 3 and 4 already have CMake targets. The targets below add phases 1+2
# and an umbrella that surfaces the pipeline in IDEs (VS Code's CMake Tools
# target picker, etc.). Generation is intentionally NOT a build-time
# dependency of _ga_py --- per ga_bindgen/README.md, regen is an explicit
# step, and generated files are committed to git so PR diffs show the API
# surface change.
# ----------------------------------------------------------------------------

# Pick the Python interpreter for ga_bindgen. Prefer the documented bindgen
# venv (build/spike_libclang/.venv, has libclang); fall back to the wrapper
# venv / system Python found by find_package(Python). Detection is recomputed
# every configure so creating the venv after the fact takes effect on reconfig.
set(_GA_BINDGEN_PYTHON "${Python_EXECUTABLE}")
if(EXISTS "${CMAKE_BINARY_DIR}/spike_libclang/.venv/bin/python")
    set(_GA_BINDGEN_PYTHON "${CMAKE_BINARY_DIR}/spike_libclang/.venv/bin/python")
    message(STATUS "ga_py: bindgen target will use ${_GA_BINDGEN_PYTHON}")
elseif(EXISTS "${CMAKE_BINARY_DIR}/spike_libclang/.venv/Scripts/python.exe")
    set(_GA_BINDGEN_PYTHON "${CMAKE_BINARY_DIR}/spike_libclang/.venv/Scripts/python.exe")
    message(STATUS "ga_py: bindgen target will use ${_GA_BINDGEN_PYTHON}")
else()
    message(STATUS
        "ga_py: bindgen target will use ${_GA_BINDGEN_PYTHON} "
        "(install libclang there, or create build/spike_libclang/.venv "
        "per ga_bindgen/README.md)")
endif()

set(_GA_BINDGEN_DIR "${GA_PROJECT_ROOT}/ga_bindgen/src")

# Phase 1+2: scan headers, then emit nanobind glue. Runs from project root so
# the scripts' default --out paths land in the source tree (where they belong;
# the generated files are committed).
add_custom_target(regenerate_python_bindings
    COMMAND "${_GA_BINDGEN_PYTHON}" "${_GA_BINDGEN_DIR}/scan.py"
    COMMAND "${_GA_BINDGEN_PYTHON}" "${_GA_BINDGEN_DIR}/emit_nanobind.py" --all
    WORKING_DIRECTORY "${GA_PROJECT_ROOT}"
    COMMENT "Regenerating Python bindings (ga_bindgen scan + emit)"
    VERBATIM
)

# Umbrella: build the wrapper and refresh the cross-check JSON. Does NOT depend
# on regenerate_python_bindings --- run that explicitly when headers change,
# then reconfigure CMake so any new bindings_*.cpp files are picked up.
# regenerate_python_test_data is defined in ga_test/CMakeLists.txt and only
# exists when _GA_BUILD_PYTHON=ON (which we are inside).
add_custom_target(ga_py_all
    COMMENT "Building ga_py wrapper and refreshing cross-check JSON"
)
add_dependencies(ga_py_all _ga_py regenerate_python_test_data)
